feat(transaction): update get transaction for user api to include some filters
